fix legend visibility + fix body overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,8 +2,8 @@
 
 body, html {
     margin: 0;
-    padding: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 #switchMode {
@@ -52,5 +52,5 @@ body, html {
 	box-sizing: border-box;
 	text-align: center;
 	pointer-events: none;
-	z-index: 1;
+	z-index: 5;
 }
